# langgraph-observer

./: .gitignore  CHANGELOG.md  README.md  dashboard.py  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
app/: main.py
app/adapters/: openai_adapter.py
app/api/: hello.py  models.py  routes.py  server.py
app/dashboard/: ui.py
app/domain/: state.py  workflow_graph.py
app/graph/: evaluation.py  hello.py  nodes.py  state.py  workflow.py
app/services/: artifact_service.py  emoji_service.py  explanation_service.py  hallucination_service.py  llm_service.py  silly_service.py  toxicity_service.py
app/storage/artifacts/: run_20251203_013622.json
app/storage/logs/: history.jsonl
app/tests/: test_artifact_service.py  test_hallucination_service.py  test_llm_service.py  test_nodes.py  test_toxicity_service.py
app/ui/: ui.py
storage/artifacts/: run_20251203T060938Z.json  run_20251203T061203Z.json  run_20251203T061322Z.json
