[project]
name = "langgraph-observer"
dynamic = ["version"]
description = "Dashboard for evaluating a langgraph"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.semantic_release]
version_source = "tag"
version_variable = "pyproject.toml:project.version"
upload_to_repository = false
build_command = ""
commit_version_number = true
changelog_file = "CHANGELOG.md"
branch = "main"